--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <h1 class="text-center">Array</h1>
             <div class="input">
-                <input type="number" id="numberInput">
+                <input type="text" id="numberInput">
                 <button id="addNum">Add number</button>
                 <button id="removeNum">Remove number</button>
             </div>
