--- a/index.html
+++ b/index.html
@@ -52,14 +52,22 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            Accordion Item #2
+                            #2: Đếm số dương
                         </button>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse"
                         data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                            demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion
-                            body. Let's imagine this being filled with some actual content.</div>
+                        <div class="accordion-body">
+                            <div class="accordion-body">
+                                <button type="submit" id="countArray">Đếm số lượng số dương trong mảng</button>
+                            </div>
+                            <div class="output">
+                                <p class="border mt-3">👉Số lượng số dương:
+                                    <span id="countArrayResult"></span>
+                                </p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="accordion-item">
