--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <button type="submit" id="sumArray">Sum Array</button>
+                            <div class="output">
+                                <p class="border mt-3">👉 Tổng số dương:
+                                    <span id="sumArrayResult"></span>
+                                </p>
+                            </div>
                         </div>
-                        <div class="output">
-                            <p class="border mt-3">👉 Tổng số dương:
-                                <span id="sumArrayResult"></span>
-                            </p>
-                        </div>
+                        
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -73,12 +74,53 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseThree" aria-expanded="false"
-                            aria-controls="flush-collapseThree">
-                            Accordion Item #3
+                            data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                            #3: Tìm số nhỏ nhất
                         </button>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <div class="accordion-body">
+                                <button type="submit" id="minArray">Tìm số nhỏ nhất</button>
+                            </div>
+                            <div class="output">
+                                <p class="border mt-3">👉Số nhỏ nhất: 
+                                    <span id="minArrayResult"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                            #4: Tìm số dương nhỏ nhất
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFour" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <div class="accordion-body">
+                                <button type="submit" id="minPositiveArray">Tìm số dương nhỏ nhất</button>
+                            </div>
+                            <div class="output">
+                                <p class="border mt-3">👉Số dương nhỏ nhất: 
+                                    <span id="minPositiveArrayResult"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                            #5: Tìm số chẵn cuối cùng
+                        </button>
+                    </h2>
+                    <div id="flush-collapseFive" class="accordion-collapse collapse"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">Placeholder content for this accordion, which is intended to
                             demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion
