--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <button type="submit" id="findLastEven">Tìm số chẵn cuối cùng</button>
                             </div>
                             <div class="output">
-                                <p class="border mt-3">👉Số chẵn cuối cùng: 
+                                <p class="border mt-3">👉Số chẵn cuối cùng:
                                     <span id="lastEvenResult"></span>
                                 </p>
                             </div>
@@ -140,9 +140,8 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#flush-collapseSix" aria-expanded="false"
-                            aria-controls="flush-collapseSix">
-                            #6: Đổi chỗ 
+                            data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                            #6: Đổi chỗ
                         </button>
                     </h2>
                     <div id="flush-collapseSix" class="accordion-collapse collapse"
@@ -157,6 +156,28 @@
                             <div class="output">
                                 <p class="border mt-3">👉Mảng sau khi đổi:
                                     <span id="afterSwap"></span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseSeven" aria-expanded="false"
+                            aria-controls="flush-collapseSeven">
+                            #7: Sắp xếp tăng dần
+                        </button>
+                    </h2>
+                    <div id="flush-collapseSeven" class="accordion-collapse collapse"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <div class="accordion-body">
+                                <button type="submit" id="btnSort">Sắp xếp</button>
+                            </div>
+                            <div class="output">
+                                <p class="border mt-3">👉Mảng sau khi sắp xếp:
+                                    <span id="afterSort"></span>
                                 </p>
                             </div>
                         </div>
